# ecosystems

./: README.md  pyproject.toml  update
res/: creature_progression.csv  creature_traits.json  region_affinities.json
scripts/: creature_combiner.py  guidebook_grouper.r  regional_guidebook.py  simulate_region_ecosystem.py
src/ecosystems/generation/: __init__.py  creature.py  grid.py  probability.py  region.py  tile.py
src/ecosystems/viz/: grid_tile.py  pgv_nx.py
