[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "ecosystems"
version = "0.0.1"
authors = [
  { name="Siddhant A. Deshmukh", email="siddhant593@gmail.com" },
]
description = "Food web and ecosystem simulator"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "matplotlib",
  "numpy",
  "networkx"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SiddhantDeshmukh/ecosystems"
